--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="sass/styles.css">
     <script src="js/main.js"></script>
-    <title>John Wrightson</title>
+    <title>Vanessa Hua</title>
     <meta name="description" content="This shows up in search engines so use plenty of keywords">
 </head>
 
