Editing index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="sass/styles.css">
     <script src="js/main.js"></script>
     <title>Vanessa Hua</title>
-    <meta name="description" content="This shows up in search engines so use plenty of keywords">
+    <meta name="description" content="Data, Engineering, AWS, Terraform, Python, SQL, CICD, Databases, Redshift, Postgres, Docker">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
                 <!-- This is on the right -->
                 <ul class="social">
-                    <li><a href="mailto:vanessa.hua.15@alumni.ucl.ac.uk"><svg aria-hidden="true" focusable="false"
+                    <li><a href="mailto:vanessahua111@gmail.com"><svg aria-hidden="true" focusable="false"
                                 data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16"
                                 role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path fill="currentColor"
@@ -80,16 +80,14 @@
         <section class="about">
             <div class="container">
                 <h1>Nice to Meet You</h1>
-                <h2>I recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively seeking an
-                    entry-level position at a company who believes that Data Engineering holds the key to understanding
-                    not only their users, but their entire business too.</h2>
+                <h2>I am an energetic, enthusiastic and determined Data Engineer looking for their next challenging role in Data Engineering.</h2>
 
                 <!-- These are your skills  -->
                 <ul class="skills">
                     <li>Python</li>
-                    <li>MySQL</li>
-                    <li>Lambda</li>
-                    <li>Grafana</li>
+                    <li>SQL</li>
+                    <li>AWS</li>
+                    <li>Terraform</li>
                     <li>Docker</li>
                 </ul>
             </div>
@@ -105,15 +103,14 @@
                     <article class="exp">
 
                         <ul class="meta">
-                            <li><strong>Aug 2020 - Nov 2020</strong></li>
-                            <li>Infinity Works / Generation.org</li>
+                            <li><strong>January 2021 - Present</strong></li>
+                            <li>comparethemarket.com</li>
+                            <li>Junior Data Engineer</li>
                         </ul>
 
-                        <p>I've recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively
-                            seeking an
-                            entry-level position at a company who believes that Data Engineering holds the key to
-                            understanding
-                            not only their users, but their entire business too.</p>
+                        <p>I've been an enthusiastic collaborator on varous projects since day one at compatrethemarket and as a result, have become adept at
+                            utilising a variety of tools and technologies, including, but not limited to, Terraform, AWS, Docker, GoCD, GitHub, Git and
+                            Postgres. Co-wrote elegant, robust and efficient solutions to produce end-to-end data validation, extraction, transformation and loading (ETL) projects with Python and SQL.</p>
                     </article>
 
                     <!-- This is a work experience article -->
@@ -123,28 +120,11 @@
                             <li><strong>Aug 2020 - Nov 2020</strong></li>
                             <li>Infinity Works / Generation.org</li>
                         </ul>
-
-                        <p>I've recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively
-                            seeking an
-                            entry-level position at a company who believes that Data Engineering holds the key to
-                            understanding
-                            not only their users, but their entire business too.</p>
+                        <p>I graduated from Generation's 12-week <strong> "Get Into Data Engineering"Bootcamp</strong>. During this time I learnt
+                            database fundamentals, programming and querying languages including Python and SQL, agile and scrum methodology, 
+                            big data and machine learning, and professional skills.</p>
                     </article>
 
-                    <!-- This is a work experience article -->
-                    <article class="exp">
-
-                        <ul class="meta">
-                            <li><strong>Aug 2020 - Nov 2020</strong></li>
-                            <li>Infinity Works / Generation.org</li>
-                        </ul>
-
-                        <p>I've recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively
-                            seeking an
-                            entry-level position at a company who believes that Data Engineering holds the key to
-                            understanding
-                            not only their users, but their entire business too.</p>
-                    </article>
                 </div>
             </div>
         </section>
@@ -220,34 +200,30 @@
                 <h1>Education</h1>
                 <div class="inner">
 
-                    <!-- This is an education article -->
-                    <article class="exp">
-
-                        <ul class="meta">
-                            <li><strong>Aug 2020 - Nov 2020</strong></li>
-                            <li>Some School / University</li>
-                        </ul>
-
-                        <p>I've recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively
-                            seeking an
-                            entry-level position at a company who believes that Data Engineering holds the key to
-                            understanding
-                            not only their users, but their entire business too.</p>
-                    </article>
-
                     <!-- This is another education article -->
                     <article class="exp">
 
                         <ul class="meta">
                             <li><strong>Aug 2020 - Nov 2020</strong></li>
-                            <li>Infinity Works / Generation.org</li>
+                            <li>Infinity Works / Generation</li>
                         </ul>
 
-                        <p>I've recently graduated from a <strong>Data Engineering Bootcamp</strong>. I'm actively
-                            seeking an
-                            entry-level position at a company who believes that Data Engineering holds the key to
-                            understanding
-                            not only their users, but their entire business too.</p>
+                        <p>I graduated from Generation's 12-week <strong> "Get Into Data Engineering"Bootcamp</strong>. During this time I learnt
+                            database fundamentals, programming and querying languages including Python and SQL, agile and scrum methodology, 
+                            big data and machine learning, and professional skills.</p>
+                    </article>
+
+                     <!-- This is an education article -->
+                     <article class="exp">
+
+                        <ul class="meta">
+                            <li><strong>October 2015 - June 2020</strong></li>
+                            <li>MSci Neuroscience, University College London</li>
+                            <li>2:1</li>
+                        </ul>
+                        <p>I extensively studied various areas of Neuroscience, Pharmacology and Physiology and undertook a large final year Master's project which involved animal work,
+                            wet laboratory work and miscroscopy. 
+                        </p>
                     </article>
 
                 </div>
